News UAT/force-app/main/default/objects/NXX2_Email_Config_For_Customer_Activity__mdt/NXX2_Email_Config_For_Customer_Activity__mdt.object-meta.xml
<CustomObject>
    <description>Configuration required to send reminder emails for customer activity</description>
    <label>NXX2 Email Config For Customer Activity</label>
    <pluralLabel>NXX2 Email Configs For Customer Activity</pluralLabel>
</CustomObject>