News UAT/force-app/main/default/objects/NXX2_Email_Config_For_Customer_Activity__mdt/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>