News UAT/force-app/main/default/objects/NXX2_Email_Config_For_Customer_Activity__mdt/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <defaultValue>1</defaultValue>
    <description>After how many days/hours, a reminder email should be send</description>
    <label>Frequency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>