News UAT/force-app/main/default/objects/NXX2_Email_Config_For_Customer_Activity__mdt/fields/Frequency_In__c.field-meta.xml
<CustomField>
    <fullName>Frequency_In__c</fullName>
    <defaultValue>&#39;Hours&#39;</defaultValue>
    <label>Frequency In</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
                <default>true</default>
                <label>Days</label>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>