News UAT/force-app/main/default/objects/NXX2_Email_Config_For_Customer_Activity__mdt/fields/Total_Number_Of_Emails__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_Of_Emails__c</fullName>
    <defaultValue>3</defaultValue>
    <description>The total number of reminder email for a customer activity</description>
    <label>Total Number Of Emails</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>